# emacs-flx-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
core/: .gitignore  rust-toolchain.toml
lisp/: flx-rs-pkg.el  flx-rs.el
