[package]
name = "emacs-flx-rs"
version = "0.1.0"
authors = ["Jen-Chieh Shen <jcs090218@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"
name = "flx_rs_core"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19.0"
flx-rs = "0.2.0"

[profile.release]
opt-level = 3
lto = "thin"
